--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [build-system]
 requires = [
-    "hatchling"
+    "hatchling>=1.22.2"
 ]
 build-backend = "hatchling.build"
 
 [project]
 name = "pypomes_scheduling"
-version = "0.3.5"
+version = "0.3.6"
 authors = [
   { name="GT Nunes", email="wisecoder01@gmail.com" }
 ]
@@ -20,7 +20,7 @@ classifiers = [
 ]
 dependencies = [
     "pip>=24.0",
-    "pypomes_core>=0.6.8",
+    "pypomes_core>=1.1.1",
     "APScheduler>=3.10.1",
     "setuptools>=68.0.0",
     "wheel>=0.42.0"
