--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [build-system]
 requires = [
-    "hatchling>=1.22.2"
+    "hatchling>=1.27.0"
 ]
 build-backend = "hatchling.build"
 
 [project]
 name = "pypomes_scheduling"
-version = "0.3.9"
+version = "0.4.2"
 authors = [
   { name="GT Nunes", email="wisecoder01@gmail.com" }
 ]
@@ -19,8 +19,9 @@ classifiers = [
     "Operating System :: OS Independent"
 ]
 dependencies = [
-    "pypomes_core>=1.6.4",
-    "APScheduler>=3.11.0"
+    "APScheduler>=3.11.0",
+    "pypomes_core>=2.0.6",
+    "pypomes_logging>=0.6.1"
 ]
 
 [project.urls]
